[package]
name = "ffery"
version = "0.3.0"
edition = "2024"

authors = ["Jakub Jantosik <jakub.jantosik@gmail.com>"]
description = "A file manipulation cli. Made for me by me."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jammymalina/ffery"
keywords = ["cli", "utility", "file-management"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
metaflac = { version = "0.2.8", features = ["serde"] }
mustache = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["macros"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
