[package]
name = "ffery"
version = "0.11.0"
edition = "2024"

authors = ["Jakub Jantosik <jakub.jantosik@gmail.com>"]
description = "A file manipulation cli. Made for me by me."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jammymalina/ffery"
keywords = ["cli", "utility", "file-management"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.18.0"
metaflac = { version = "0.2.8", features = ["serde"] }
mustache = "0.9.0"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = { version = "3.14.0", features = ["macros"] }
zip = "4.5.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
