[package]
name = "ffery"
version = "0.11.0"
edition = "2024"

authors = ["Jakub Jantosik <jakub.jantosik@gmail.com>"]
description = "A file manipulation cli. Made for me by me."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jammymalina/ffery"
keywords = ["cli", "utility", "file-management"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
indicatif = "0.18.2"
metaflac = { version = "0.2.8", features = ["serde"] }
mustache = "0.9.0"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.15.1", features = ["macros"] }
zip = "6.0.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
